using new JDK17 Stream.toList