@@ -42,7 +42,6 @@ import java.util.Objects;
 import java.util.concurrent.ExecutionException;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 
 public class Interpreter {
 
@@ -127,7 +126,7 @@ public class Interpreter {
 		return arguments
 			       .stream()
 			       .map(resolvable -> resolvable.resolve(state))
-			       .collect(Collectors.toList());
+			       .toList();
 	}
 
 	private String messageFor(ExecutionException e) {
